--- a/apps/sandbox/src/components/navigation.astro
+++ b/apps/sandbox/src/components/navigation.astro
@@ -1,26 +1,15 @@
 ---
-import { GitHubLogoIcon } from "@radix-ui/react-icons";
 import GitHub from "./github";
 
 const locations = ["docs", "play", "changelog"];
 const pathname = new URL(Astro.request.url).pathname;
-const Link = "rounded w-10 h-10 flex items-center justify-center lg:hover:bg-gray-100/10";
 ---
 
 <nav
   class='flex justify-between items-center h-[7vh] px-3 border-b border-gray-100/5 max-w-7xl m-auto'
 >
-  <a href='/' class='rounded p-3 border-orange-700 border md:block hidden'>
-    <svg width='33' height='33' viewBox='0 0 40 40' xmlns='http://www.w3.org/2000/svg'>
-      <g fill='none' fill-rule='evenodd'>
-        <path
-          d='M40 20c0 11.046-8.954 20-20 20S0 31.046 0 20 8.954 0 20 0s20 8.954 20 20'
-          fill='#FF6154'></path>
-        <path
-          d='M22.667 20H17v-6h5.667a3 3 0 0 1 0 6m0-10H13v20h4v-6h5.667a7 7 0 1 0 0-14'
-          fill='#FFF'></path>
-      </g>
-    </svg>
+  <a href='/' class='rounded p-1 md:block hidden'>
+    <img src='/icon.svg' alt='' class='w-10' />
   </a>
 
   <ul class='flex items-center gap-x-6'>
