--- a/apps/sandbox/src/layouts/main.astro
+++ b/apps/sandbox/src/layouts/main.astro
@@ -1,6 +1,6 @@
 ---
-import Navigation from "../components/navigation.astro";
 import Footer from "../components/footer.astro";
+import Navigation from "../components/navigation.astro";
 
 const { title, className, frontmatter } = Astro.props;
 ---
@@ -8,10 +8,14 @@ const { title, className, frontmatter } = Astro.props;
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link rel='icon' type='image/svg+xml' href='/icon.svg' />
+
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
-    <title>{title} / PH Badge</title>
+
+    <title>{title} - PH Badge</title>
+    <meta name='description' content='Enhanced Product Hunt badge for your products.' />
+    <!-- <ViewTransitions /> -->
   </head>
 
   <body class='bg-[#161412] text-white'>
