--- a/apps/sandbox/src/pages/docs/index.astro
+++ b/apps/sandbox/src/pages/docs/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/docs.astro";
 ---
 
-<Layout>
+<Layout title='Intro'>
   <h1 class='text-5xl font-bold capitalize mb-5'>Introduction</h1>
 
   <p>
