--- a/apps/sandbox/src/pages/index.astro
+++ b/apps/sandbox/src/pages/index.astro
@@ -9,5 +9,5 @@ import Layout from "../layouts/main.astro";
   className='max-w-7xl m-auto items-center justify-center h-[88vh]'
 >
   <small>Multi-framework</small>
-  <NPM client:load />
+  <NPM client:load width="w-fit" />
 </Layout>
