--- a/apps/sandbox/src/pages/docs/[...slug].astro
+++ b/apps/sandbox/src/pages/docs/[...slug].astro
@@ -1,5 +1,5 @@
 ---
-import { CollectionEntry, getCollection } from "astro:content";
+import { getCollection } from "astro:content";
 import Layout from "../../layouts/docs.astro";
 
 export async function getStaticPaths() {
