--- a/apps/sandbox/src/components/footer.astro
+++ b/apps/sandbox/src/components/footer.astro
@@ -1,12 +1,12 @@
 ---
-
+import { ArrowTopRightIcon } from "@radix-ui/react-icons"
 ---
 
 <footer
   class='h-[5vh] flex items-center justify-between px-3 max-w-7xl m-auto border-t border-gray-100/5'
 >
   <small></small>
-
+  
   <small>
     Developed by
     <a
