--- a/apps/sandbox/src/layouts/main.astro
+++ b/apps/sandbox/src/layouts/main.astro
@@ -23,7 +23,7 @@ const { title, className, frontmatter } = Astro.props;
   <body class='bg-[#161412] text-white'>
     <Navigation />
 
-    <main class:list={["flex flex-col max-w-7xl mx-auto lg:px-0 px-3", className]}>
+    <main class:list={["flex flex-col max-w-7xl mx-auto px-5", className]}>
       <slot />
     </main>
 
